- Add loadparent and newchild bytecode instructions - Add VM support for local classes and inner classes; remove their transformations in the compiler - Prevent generation of parameterized classes during compilation - Add compiler transformation for array initializer